--- a/mediaPipe/mediapipe.ipynb
+++ b/mediaPipe/mediapipe.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2e753f35510>"
+       "<matplotlib.image.AxesImage at 0x2e70a4eea50>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,22 +164,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Input timestamp must be monotonically increasing.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 41\u001b[0m\n\u001b[0;32m     38\u001b[0m mp_image \u001b[38;5;241m=\u001b[39m mp\u001b[38;5;241m.\u001b[39mImage(image_format\u001b[38;5;241m=\u001b[39mmp\u001b[38;5;241m.\u001b[39mImageFormat\u001b[38;5;241m.\u001b[39mSRGB, data\u001b[38;5;241m=\u001b[39mnumpy_frame_from_opencv)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;66;03m# STEP 4: Detect pose landmarks from the input image.\u001b[39;00m\n\u001b[1;32m---> 41\u001b[0m detection_result \u001b[38;5;241m=\u001b[39m \u001b[43mdetector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetect_for_video\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfps\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;66;03m# STEP 5: Process the detection result. In this case, visualize it.\u001b[39;00m\n\u001b[0;32m     44\u001b[0m annotated_frame \u001b[38;5;241m=\u001b[39m draw_landmarks_on_image(numpy_frame_from_opencv, detection_result)\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\mediapipe\\tasks\\python\\vision\\pose_landmarker.py:395\u001b[0m, in \u001b[0;36mPoseLandmarker.detect_for_video\u001b[1;34m(self, image, timestamp_ms, image_processing_options)\u001b[0m\n\u001b[0;32m    370\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Performs pose landmarks detection on the provided video frame.\u001b[39;00m\n\u001b[0;32m    371\u001b[0m \n\u001b[0;32m    372\u001b[0m \u001b[38;5;124;03mOnly use this method when the PoseLandmarker is created with the video\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    390\u001b[0m \u001b[38;5;124;03m  RuntimeError: If pose landmarker detection failed to run.\u001b[39;00m\n\u001b[0;32m    391\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    392\u001b[0m normalized_rect \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconvert_to_normalized_rect(\n\u001b[0;32m    393\u001b[0m     image_processing_options, image, roi_allowed\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    394\u001b[0m )\n\u001b[1;32m--> 395\u001b[0m output_packets \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_process_video_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\n\u001b[0;32m    396\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_IMAGE_IN_STREAM_NAME\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mpacket_creator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_image\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    397\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtimestamp_ms\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m_MICRO_SECONDS_PER_MILLISECOND\u001b[49m\n\u001b[0;32m    398\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    399\u001b[0m \u001b[43m    \u001b[49m\u001b[43m_NORM_RECT_STREAM_NAME\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mpacket_creator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate_proto\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    400\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnormalized_rect\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_pb2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    401\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimestamp_ms\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m_MICRO_SECONDS_PER_MILLISECOND\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    402\u001b[0m \u001b[43m\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    404\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m output_packets[_NORM_LANDMARKS_STREAM_NAME]\u001b[38;5;241m.\u001b[39mis_empty():\n\u001b[0;32m    405\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m PoseLandmarkerResult([], [])\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\mediapipe\\tasks\\python\\vision\\core\\base_vision_task_api.py:119\u001b[0m, in \u001b[0;36mBaseVisionTaskApi._process_video_data\u001b[1;34m(self, inputs)\u001b[0m\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_running_mode \u001b[38;5;241m!=\u001b[39m _RunningMode\u001b[38;5;241m.\u001b[39mVIDEO:\n\u001b[0;32m    115\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    116\u001b[0m       \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTask is not initialized with the video mode. Current running mode:\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    117\u001b[0m       \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_running_mode\u001b[38;5;241m.\u001b[39mname\n\u001b[0;32m    118\u001b[0m   )\n\u001b[1;32m--> 119\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_runner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess\u001b[49m\u001b[43m(\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: Input timestamp must be monotonically increasing."
+     ]
+    }
+   ],
    "source": [
+    "# STEP 1: Import the necessary modules.\n",
     "import mediapipe as mp\n",
-    "import cv2\n",
+    "from mediapipe.tasks import python\n",
+    "from mediapipe.tasks.python import vision\n",
     "\n",
+    "packet = mp.Packet()\n",
+    "\n",
+    "# STEP 2: Create an PoseLandmarker object.\n",
+    "base_options = python.BaseOptions(model_asset_path='pose_landmarker.task')\n",
+    "options = vision.PoseLandmarkerOptions(\n",
+    "    running_mode=mp.tasks.vision.RunningMode.VIDEO,\n",
+    "    base_options=base_options,\n",
+    "    output_segmentation_masks=True)\n",
+    "detector = vision.PoseLandmarker.create_from_options(options)\n",
+    "\n",
+    "# STEP 3: Load the input Video\n",
     "# Use OpenCV’s VideoCapture to load the input video.\n",
-    "cap = cv2.VideoCapture(\"0001.mp4\")\n",
+    "cap = cv2.VideoCapture(\"vid01.mp4\")\n",
     "\n",
     "# Load the frame rate of the video using OpenCV’s CV_CAP_PROP_FPS\n",
     "# You’ll need it to calculate the timestamp for each frame.\n",
-    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "\n",
-    "# Initialize MediaPipe Hands.\n",
-    "mp_hands = mp.solutions.hands\n",
+    "fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+    "frame_duration = int(1000 / fps)  # Frame duration in milliseconds\n",
+    "timestamp = 0  # Initialize timestamp\n",
     "\n",
     "# Loop through each frame in the video using VideoCapture#read()\n",
     "while cap.isOpened():\n",
@@ -194,19 +220,26 @@
     "    # Assuming you have already installed numpy and imported it\n",
     "    numpy_frame_from_opencv = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    mp_image = mp.Image(image_format=mp.ImageFormat.SRGB, data=numpy_frame_from_opencv)\n",
+    "\n",
+    "    # STEP 4: Detect pose landmarks from the input image.\n",
+    "    detection_result = detector.detect_for_video(image, fps)\n",
+    "\n",
+    "    # STEP 5: Process the detection result. In this case, visualize it.\n",
+    "    annotated_frame = draw_landmarks_on_image(numpy_frame_from_opencv, detection_result)\n",
+    "    annotated_frame_bgr = cv2.cvtColor(annotated_frame, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "    # Display the annotated frame\n",
+    "    cv2.imshow('Pose Landmarker', annotated_frame_bgr)\n",
     "    \n",
-    "    # Process the image with MediaPipe Hands here if needed\n",
+    "    # Increment the timestamp\n",
+    "    timestamp += frame_duration\n",
     "    \n",
-    "    # Display the frame\n",
-    "    cv2.imshow('Frame', frame)\n",
-    "    \n",
-    "    # Break the loop if 'q' key is pressed\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "    # Break the loop if the 'q' key is pressed\n",
+    "    if cv2.waitKey(frame_duration) & 0xFF == ord('q'):\n",
     "        break\n",
     "\n",
-    "# Release the VideoCapture and close all OpenCV windows\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n"
    ]
   }
  ],
